updated LandingPage + fixed horizontal scrolling

--- a/frontend/src/Body/Footer/Footer.css
+++ b/frontend/src/Body/Footer/Footer.css
@@ -70,10 +70,6 @@
 	box-sizing: border-box;
 }
 
-.footer-link-items h2 {
-	margin-bottom: 16px;
-}
-
 .footer-link-items > h2 {
 	color: #fff;
 }
@@ -81,22 +77,11 @@
 .footer-link-items a {
 	color: #fff;
 	text-decoration: none;
-	margin-bottom: 8px;
 }
 
 .footer-link-items a:hover {
 	color: #e9e9e9;
 	transition: 0.3s ease-out;
-}
-
-.footer-email-form h2 {
-	margin-bottom: 32px;
-}
-
-/* Social Icons */
-.social-icon-link {
-	color: #fff;
-	font-size: 24px;
 }
 
 .social-media {
@@ -111,13 +96,6 @@
 	width: 90%;
 	max-width: 1000px;
 	margin: 40px auto 0 auto;
-}
-
-.social-icons {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 240px;
 }
 
 .social-logo {
