--- a/frontend/src/Body/MovieView/MovieView.css
+++ b/frontend/src/Body/MovieView/MovieView.css
@@ -1,4 +1,4 @@
 .gridView {
 	padding: 4rem 4rem 4rem 4rem;
-	padding-left: 6rem;
+	padding-left: 5rem;
 }
